--- a/ComposantsCools/index.html
+++ b/ComposantsCools/index.html
@@ -31,6 +31,7 @@
     <li><a href="Pop-outEffect/">Pop-outEffect</a></li>
     <li><a href="Tabs/">Tabs</a></li>
     <li><a href="Parallax/">Parallax</a></li>
+    <li><a href="TutosCanvas/">TutosCanvas</a></li>
   </ul>
   </body>
 </html>
